Moved mapping functions to Mapping.fs and addressed OTM handling bug

--- a/Dixie/Dixie.fsproj
+++ b/Dixie/Dixie.fsproj
@@ -7,5 +7,6 @@
     <Compile Include="Util/Attributes.fs" />
     <Compile Include="Util/Generic.fs" />
     <Compile Include="Util/Table.fs" />
+    <Compile Include="Mapping.fs" />
   </ItemGroup>
 </Project>
