--- a/Dixie/Dixie.fsproj
+++ b/Dixie/Dixie.fsproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Util/Types.fs" />
+    <Compile Include="Util/DbType.fs" />
     <Compile Include="Util/Attributes.fs" />
     <Compile Include="Util/Generic.fs" />
     <Compile Include="Util/Table.fs" />
