--- a/Mali/Mali.fsproj
+++ b/Mali/Mali.fsproj
@@ -1,14 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Util/Types.fs" />
-    <Compile Include="Util/Attributes.fs" />
-    <Compile Include="Util/DbType.fs" />
-    <Compile Include="Util/Column.fs" />
-    <Compile Include="Util/Generic.fs" />
-    <Compile Include="Util/Table.fs" />
+    <Compile Include="Base/Types.fs" />
+    <Compile Include="Base/Attributes.fs" />
+    <Compile Include="Base/DbType.fs" />
+    <Compile Include="Base/Column.fs" />
+    <Compile Include="Base/Util.fs" />
+    <Compile Include="Base/Table.fs" />
     <Compile Include="Mapping.fs" />
   </ItemGroup>
+  <Import Project=".paket\Paket.Restore.targets" />
 </Project>
